<resources>
    <string name="app_name">gb</string>
    <string name="title_home">Home</string>
    <string name="title_categories">Categories</string>
    <string name="title_brands">Brands</string>
    <string name="title_offers">Offers</string>
    <string name="title_cart">Cart</string>
    <string name="title_search">Search</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
