<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/categories"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/offer"
        android:title="@string/title_offers" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/cart"
        android:title="@string/title_cart" />

</menu>